# fastAPI

./: .coverage  pyproject.toml
.github/workflows/: ci.yaml  ci.yml
when2meet/: .gitignore  README.md  conftest.py  main.py  prac.py  pyproject.toml  scratch_12.py  temp.py
when2meet/app/: __init__.py
when2meet/app/apis/v1/: meeting_router.py
when2meet/app/configs/: __init__.py  base_config.py  tortoise_config.py
when2meet/app/dtos/: create_meeting_response.py  frozen_config.py  get_meeting_response.py  update_meeting_request.py
when2meet/app/schemas/: users.py
when2meet/app/service/: meeting_sevice_mysql.py
when2meet/app/tests/apis/v1/: test_meeting_router_mysql.py
when2meet/app/tests/v1/: test_meeting_router_mysql.py
when2meet/app/tortoise_models/: base_model.py  meeting.py
when2meet/app/utils/: base62.py
when2meet/migrations/models/: 0_20250821182750_init.py  1_20250822152737_update.py
